feat: port to lamp