@@ -5,6 +5,7 @@ import org.bukkit.plugin.java.JavaPlugin;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.util.Scanner;
 import java.util.function.Consumer;
@@ -18,7 +19,7 @@ public class UpdateChecker {
 
 	private void getVersionAsync(String apiUrl, Consumer<String> consumer) {
 		Bukkit.getScheduler().runTaskAsynchronously(this.plugin, () -> {
-			try (InputStream inputStream = new URL(apiUrl).openStream(); Scanner scanner = new Scanner(inputStream)) {
+			try (InputStream inputStream = URI.create(apiUrl).toURL().openStream(); Scanner scanner = new Scanner(inputStream)) {
 				if (scanner.hasNext()) {
 					consumer.accept(scanner.next());
 				}
